--- a/index.htm
+++ b/index.htm
@@ -29,8 +29,20 @@
         <p>
           Your result is: <br />
           <span class="correct"> 15</span> out of 15 -
-          <span class="percentage"> 33.1% </span>
-          <button class="restart">Reset Game 🕹</button>
+          <span class="percentage">Success 33.1%</span>
+          <button class="restart">Restart 🎮</button>
+        </p>
+      </div>
+
+      <div class="welcome">
+        <p>
+          Welcome to Quiz Game: <br />
+          <button class="start">Start Now 🎮</button> <br />
+          <span class="neme">Set the number of questions:</span> <br />
+
+          <input class="numOfQues" type="text" value="1" />
+          <button class="roller decrease">-</button>
+          <button class="roller increase">+</button>
         </p>
       </div>
     </div>
