--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
+    <!-- <script defer src="script.js"></script> -->
+    <script defer src="scripto.js"></script>
   </head>
   <body>
     <div class="container">
@@ -14,7 +15,7 @@
         <div class="name">
           <h1 class="app__name">Quiz App</h1>
         </div>
-        <p class="timer">00:30</p>
+        <p class="timer"></p>
 
         <h3 class="question">What the fuck bruh ?</h3>
         <ul class="answers">
@@ -28,7 +29,7 @@
       <div class="result">
         <p>
           Your result is: <br />
-          <span class="correct"> 15</span> out of 15 -
+          <span class="correct"> 15</span> out of <span class="sualSay"></span> -
           <span class="percentage">Success 33.1%</span>
           <button class="restart">Restart 🎮</button>
         </p>
@@ -41,8 +42,8 @@
           <span class="neme">Set the number of questions:</span> <br />
 
           <input class="numOfQues" type="text" value="1" />
-          <button class="roller decrease">-</button>
-          <button class="roller increase">+</button>
+          <button class="roller decrease">➖</button>
+          <button class="roller increase">➕</button>
         </p>
       </div>
     </div>
