--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,7 @@
           <h1 class="app__name">Quiz App</h1>
         </div>
         <p class="timer"></p>
-
-        <h3 class="question">What the fuck bruh ?</h3>
+        <h3 class="question">Question?</h3>
         <ul class="answers">
           <li class="answer first">ANSWER 1</li>
           <li class="answer second">ANSWER 2</li>
@@ -29,8 +28,9 @@
       <div class="result">
         <p>
           Your result is: <br />
-          <span class="correct"> 15</span> out of <span class="sualSay"></span> -
-          <span class="percentage">Success 33.1%</span>
+          <span class="correct"> 15</span> out of
+          <span class="sualSay"></span> -
+          <span class="percentage"></span>
           <button class="restart">Restart 🎮</button>
         </p>
       </div>
